@@ -1,5 +1,9 @@
 $Id$
 
+2016-04-24  Christian Franke  <franke@computer.org>
+
+	smartd.cpp, smartd.conf.5.in: Remove support for '-m [sys]msgbox'.
+
 2016-04-23  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
